Changes since milestone-02:

* Fix regex code to work with Linux as well.  [Justin Erenkrantz]

* Add ability to have a staggered startup of threads.  By specifying
  startdelay="X" and startcount="Y", flood will start Y threads every
  X seconds until the count value is reached.  [Justin Erenkrantz]

* Rewrite the expression/template code to use variable names (backed by a 
  hash table) and allow use of regular expressions for the response
  template.  
  The new syntax is as follows:
    ${foo}  substitutes foo's value.
    ${=foo} generates a random number and stores it in foo and substitutes it.
    ([^>]*) (regex sub-expression) coupled with responsename="foo" allows 
            that subexpression to be stored in foo based on what is in the
            response from the server.  It will only take the first 
            sub-expression in the regex and store it in the value.
  [Justin Erenkrantz]

Changes since milestone-01:

* Merge SSL socket code in with the normal socket calls.  flood will
  now determine (based on the protocol scheme) whether it should use
  SSL or not.  [Justin Erenkrantz]

* Add ability to retrieve some data from the response and place it in 
  state variables (max of 10).  These "state" variables live for the 
  life of the profile (i.e. all elements in the urllist).  They may be 
  referred in any template via $[0-9].  Add ability to store the 
  entire response (only active if a response template is present).
  [Justin Erenkrantz]

* Added a new report type called "relative_timers". Each
  of our 4 main timers is printed just as with the "easy"
  reporting scheme, only they only show elapsed time since
  the beginning of the request/response test cycle.
  [Aaron Bannert]

* Added another timer (begin) that happens immediately before
  the connect() is made (or would be made). This is necessary
  if we want to calculate the elapsed time for the rest of
  our timers. [Aaron Bannert]
